--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,5 +1,5 @@
 .shadow {
-  box-shadow: 0 10px 30px 0px rgb(0, 0, 0, 0.1);
+  box-shadow: 10px 0 30px 0 rgb(0, 0, 0, 0.3);
 }
 
 .dark-mode-activated body {
@@ -30,4 +30,9 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
+}
+
+.footer {
+  padding: 1rem;
+  background-color: grey;
 }
