--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,7 +1,3 @@
-.shadow {
-  box-shadow: 10px 0 30px 0 rgb(0, 0, 0, 0.3);
-}
-
 .dark-mode-activated body {
   background-color: #1c1c1e;
   color: #fefefe;
@@ -33,6 +29,6 @@
 }
 
 .footer {
-  padding: 1rem;
-  background-color: grey;
+  height: 15%;
+  background-color: rgba(200, 200, 200, 0.9);
 }
