--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -26,7 +26,13 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.9), 50%, rgba(0, 0, 0, 0));
+}
+
+.carouselTitle {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .footer {
