--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -54,6 +54,7 @@
   font-size: 0.65rem;
 }
 .cardImg{
+  position: absolute;
   width:70px;
   height:60px;
   object-fit:cover;
@@ -61,9 +62,9 @@
   left: 13px;
   z-index: 5 !important;
 }
-.cardImg::before{
+.coloredSquare{
   position: absolute;
-  z-index: 40 !important;
+  z-index: 4 !important;
   content: '';
   width: 47px;
   height: 50px;
